# crewai

./: .gitignore  .replit  README.md  async_demo.py  main.py  pyproject.toml  seed_upstash.py
indexing/: process_pdf.py
indexing/assets/embeddings/: 2501.13956.json  test.json
indexing/assets/payloads/: test.json
output/: multimodal_report.md
scripts/: seed_upstash.py
src/: __init__.py  crew.py  main.py
src/config/: agents.yaml  tasks.yaml
src/generic_mm_project/: __init__.py  crew.py  main.py  upstash_vector_tool.py  voyage_embed.py
src/generic_mm_project/config/: agents.yaml  tasks.yaml
src/output/: multimodal_report.md
src/services/embeddings/: voyage_embed.py
src/services/vector/: upstash_vector_tool.py
